[gd_scene load_steps=7 format=3 uid="uid://dv1mampajaouw"]

[ext_resource type="Script" uid="uid://cpsn23k1lk858" path="res://source/objects/pot/pot.gd" id="1_dodpc"]
[ext_resource type="Texture2D" uid="uid://c7ens5ooh0opn" path="res://assets/objects/ME_Singles_Garden_16x16_Vase_Full.png" id="2_lbhvg"]
[ext_resource type="Texture2D" uid="uid://uhmxynh6bbgv" path="res://assets/objects/ME_Singles_Garden_16x16_Small_Sprout_Vase_5.png" id="3_vrgrq"]
[ext_resource type="Texture2D" uid="uid://hvidah8q7j16" path="res://assets/objects/ME_Singles_Garden_16x16_Small_Sprout_Vase_4.png" id="4_qe6cj"]
[ext_resource type="AudioStream" uid="uid://cc2y6b1g0inxj" path="res://assets/audios/sfx/dig.mp3" id="5_6lgdq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u5qb8"]
size = Vector2(15, 16)

[node name="pot" type="StaticBody2D"]
script = ExtResource("1_dodpc")

[node name="wo_plant" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
position = Vector2(8, 8)
texture = ExtResource("2_lbhvg")

[node name="w_plant_bud" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(8, 8)
texture = ExtResource("4_qe6cj")

[node name="w_plant_watered" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
position = Vector2(8, 8)
texture = ExtResource("3_vrgrq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(7.5, 8)
shape = SubResource("RectangleShape2D_u5qb8")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_6lgdq")
volume_db = -0.55
bus = &"Sfx"
